--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -10,5 +10,8 @@ jobs:
     steps:
       - name: Ping TLS bot
         run: |
-          curl -s https://my-vercel-cron-czsf5ilhf-jsdeveloper98s-projects.vercel.app/api/cron \
-            --fail --show-error
+          curl -fsS \
+            -H "Authorization: Bearer s3cr3t-T0k3n-4V3ryL0ngR4nd0m" \
+            https://my-vercel-cron-czsf5ilhf-jsdeveloper98s-projects.vercel.app/api/cron \
+            --retry 3 \
+            --retry-delay 5
