--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -10,8 +10,4 @@ jobs:
     steps:
       - name: Invoke cron function
         run: |
-          curl -fsS \
-            -H "Authorization: Bearer s3cr3t-T0k3n-4V3ryL0ngR4nd0m" \
-            https://my-vercel-cron-5o16vn4uf-jsdeveloper98s-projects.vercel.app/api/cron \
-            --retry 3 \
-            --retry-delay 5
+          curl -s \ https://my-vercel-cron-5o16vn4uf-jsdeveloper98s-projects.vercel.app/api/cron
