--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -10,4 +10,4 @@ jobs:
     steps:
       - name: Invoke cron function
         run: |
-          curl -s \ https://my-vercel-cron-gbps573x7-jsdeveloper98s-projects.vercel.app/api.cron
+          curl -v -sS https://my-vercel-cron-gbps573x7-jsdeveloper98s-projects.vercel.app/api/cron
