--- a/package.json
+++ b/package.json
@@ -11,5 +11,18 @@
   "license": "ISC",
   "engines": {
     "node": ">=18"
+  },
+  "dependencies": {
+    "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
+    "moment": "^2.29.4",
+    "node-cron": "^3.0.3",
+    "node-schedule": "^2.1.1",
+    "nodemailer": "^6.9.7",
+    "puppeteer": "^21.6.1",
+    "typescript": "^5.8.3",
+    "winston": "^3.11.0",
+    "wrangler": "^4.21.0",
+    "nodemon": "^3.0.2"
   }
 }
