--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "node-cron": "^3.0.3",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.7",
-    "puppeteer": "^21.6.1",
+    "nodemon": "^3.0.2",
     "typescript": "^5.8.3",
     "winston": "^3.11.0",
     "wrangler": "^4.21.0",
-    "nodemon": "^3.0.2"
+    "chrome-aws-lambda": "10.1.0",
+    "puppeteer-core": "10.1.0"
   }
 }
