--- a/package.json
+++ b/package.json
@@ -11,19 +11,18 @@
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": ">=18"
+    "node": "18"
   },
   "dependencies": {
-    "@sparticuz/chromium": "^137.0.1",
+    "@sparticuz/chromium": "^119.0.2",
+    "puppeteer-core": "^21.5.1",
     "axios": "^1.6.2",
-    "chrome-aws-lambda": "^10.1.0",
     "dotenv": "^16.3.1",
     "moment": "^2.29.4",
     "node-cron": "^3.0.3",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.2",
-    "puppeteer-core": "10.1.0",
     "typescript": "^5.8.3",
     "winston": "^3.11.0",
     "wrangler": "^4.21.0"
