--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "node": "18"
   },
   "dependencies": {
-    "@sparticuz/chromium": "^119.0.2",
-    "puppeteer-core": "^21.5.1",
+    "@sparticuz/chromium": "110.0.0",
+    "puppeteer-core": "19.6.3",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "moment": "^2.29.4",
