--- a/package.json
+++ b/package.json
@@ -10,12 +10,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "engines": {
-    "node": "18"
-  },
   "dependencies": {
-    "@sparticuz/chromium": "110.0.0",
-    "puppeteer-core": "19.6.3",
+    "@sparticuz/chromium": "^123.0.0",
+    "puppeteer-core": "^22.11.0",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "moment": "^2.29.4",
