--- a/package.json
+++ b/package.json
@@ -11,21 +11,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sparticuz/chromium": "^133.0.0",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "moment": "^2.29.4",
     "node-cron": "^3.0.3",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.2",
+    "puppeteer-core": "^6.0.0",
     "winston": "^3.11.0",
-    "wrangler": "^4.21.0",
-    "puppeteer-core": "^6",
-    "chrome-aws-lambda": "^6"
+    "wrangler": "^4.21.0"
   },
   "devDependencies": {
-    "puppeteer": "^16.2.0"
+    "puppeteer": "^24.11.1",
+    "typescript": "^5.8.3"
   },
   "engines": {
-    "node": "^14"
+    "node": "^18.0.0 || ^20.0.0"
   }
 }
