--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "wrangler": "^4.21.0"
   },
   "devDependencies": {
-    "puppeteer": "^23.10.4",
-    "typescript": "^5.8.3"
+    "puppeteer": "^23.10.4"
   }
 }
